added link to Git docs.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1>Git and Github crash course</h1>
     <p>Because this basics are important</p>
+    <p>
+      Learn more about on Git on
+      <a href="https://git-scm.com/book/en/v2"> the official website. </a>
+    </p>
     <p>Because this basics</p>
   </body>
 </html>
