added link and restructured page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git and Github crash course</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Git and Github crash course</h1>
-    <p>Because this basics are important</p>
-    <p>
-      Learn more about on Git on
-      <a href="https://git-scm.com/book/en/v2"> the official website. </a>
-    </p>
-    <p>Because this basics</p>
+    <header>
+      <img
+        id="logo.png"
+        alt="logo.png"
+        srcset="A logo that contains the word Git"
+      />
+      <h1>Git and Github crash course</h1>
+    </header>
+    <main>
+      <p>Because this basics are important</p>
+      <p>
+        Learn more about on Git on
+        <a href="https://git-scm.com/book/en/v2"> the official website. </a>
+        <a href="https://acad.link/git"> our course </a>
+      </p>
+      <p>Because this basics</p>
+
+      <p>Because this/p></p>
+    </main>
   </body>
 </html>
