--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
       <h1>Git and Github crash course</h1>
     </header>
     <main>
-      <p>Because this basics are important</p>
-      <p>
-        Learn more about on Git on
-        <a href="https://git-scm.com/book/en/v2"> the official website. </a>
-        <a href="https://acad.link/git"> our course </a>
-      </p>
-      <p>Because this basics</p>
+      <section>
+        <p>Because this basics are important</p>
+        <p>
+          Learn more about on Git on
+          <a href="https://git-scm.com/book/en/v2"> the official website. </a>
+          <a href="https://acad.link/git"> our course </a>
+        </p>
+        <p>Because this basics</p>
 
-      <p>Because this/p></p>
+        <p>Because this/p></p>
+      </section>
     </main>
   </body>
 </html>
